<resources>
    <string name="app_name">IL Патио</string>
    <string name="btn_sign_in">Войти</string>
    <string name="btn_continue">Продолжить</string>
    <string name="common_desc">Картиночка</string>
    <string name="edit_text_phone">+7</string>
    <string name="edit_text_pass">Код</string>
    <string name="text_phone">На номер телефона будет отправлен код подтверждения</string>
    <string name="text_enter1">Укажите телефон</string>
    <string name="text_enter2">Чтобы войти или зарегистрироваться</string>
    <string name="text_enter3">Войдите, чтобы совершать заказы</string>
    <string name="text_exit">Выйти из профиля</string>
    <string name="profile_name">Имя</string>
    <string name="profile_phone">Телефон</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_title">Профиль</string>
    <string name="settings_title">Настройки</string>
    <string name="cart_title">Корзина</string>
    <string name="delete_cart_item">Удалить</string>
    <string name="make_order">Оформить заказ</string>
    <string name="empty_cart">Ваша корзина пуста</string>
    <string name="cost">Цена</string>
    <string name="cost2">₽</string>
    <string name="contacts_title">Рестораны</string>
    <string name="city">Москва</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cont_title1">Есть вопросы?</string>
    <string name="cont_title2">Просто звоните</string>
    <string name="cont_title3">+7 (499) 666-04-00</string>
    <string name="promo">Акции и промокоды</string>
    <string name="ealierOrder">Мои заказы</string>
    <string name="like_product">Адреса доставки</string>
</resources>