<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="83dp"
        android:layout_height="88dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/common_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_codcountry"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/edit_text_phone"
                android:textColor="@color/text_color_hint"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phoneEditText"
                style="@style/regularEdittext"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:text="@string/text_phone"
            android:textColor="@color/text_color_hint"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnAuth"
            style="@style/regularButton"
            android:layout_marginTop="50dp"
            android:background="@drawable/ripple_effect"
            android:fontFamily="@font/roboto"
            android:text="@string/btn_continue" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/common_desc"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="goBack"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_enter1"
        android:textColor="@color/text_color_hint2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_enter2"
        android:textColor="@color/text_color_hint2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:textColor="@color/error_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>