<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/styleBar"
        android:layout_width="match_parent"
        android:gravity="start|center_vertical"
        android:orientation="vertical"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.12"
            android:text="@string/profile_title"
            android:textColor="@color/main_text_color"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/style_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/nameUser"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            android:text="@string/text_enter3"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text=""
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnAuth"
            style="@style/regularButton"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/common_desc"
            android:onClick="signIn"
            android:text="@string/btn_sign_in" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/down_bar_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/common_desc"
                app:srcCompat="@drawable/ic_btn_profilepress" />

            <ImageButton
                android:id="@+id/btn_menu"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_btn_menu"
                android:contentDescription="@string/common_desc"
                android:onClick="goToMain"
                app:srcCompat="@drawable/ic_btn_menunopress" />

            <ImageButton
                android:id="@+id/btn_contacts"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:onClick="goToContacts"
                android:background="@drawable/ripple_effect_btn_menu"
                android:contentDescription="@string/common_desc"
                app:srcCompat="@drawable/ic_btn_contacts" />

            <ImageButton
                android:id="@+id/btn_cart"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_btn_menu"
                android:contentDescription="@string/common_desc"
                android:onClick="goToCart"
                app:srcCompat="@drawable/ic_btn_bascket" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/info_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto"
            android:text="@string/ealierOrder"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:background="@color/ripple_category_color"
            android:orientation="vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto"
            android:text="@string/like_product"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:background="@color/ripple_category_color"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/promo"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/promr" />
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>