<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ContactActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/styleBar"
        android:layout_width="match_parent"
        android:gravity="start|center_vertical"
        android:orientation="vertical"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.12"
            android:text="@string/contacts_title"
            android:textColor="@color/main_text_color"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cont_title1"
            android:textColor="@color/text_color_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cont_title2"
            android:textColor="@color/text_color_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/cont_title3"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/down_bar_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:onClick="goToProfile"
                android:background="@android:color/transparent"
                android:contentDescription="@string/common_desc"
                app:srcCompat="@drawable/ic_btn_profile" />

            <ImageButton
                android:id="@+id/btn_menu"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_btn_menu"
                android:contentDescription="@string/common_desc"
                android:onClick="goToMain"
                app:srcCompat="@drawable/ic_btn_menunopress" />

            <ImageButton
                android:id="@+id/btn_contacts"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_btn_menu"
                android:contentDescription="@string/common_desc"
                app:srcCompat="@drawable/ic_btn_contactspress" />

            <ImageButton
                android:id="@+id/btn_cart"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_btn_menu"
                android:contentDescription="@string/common_desc"
                android:onClick="goToCart"
                app:srcCompat="@drawable/ic_btn_bascket" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <WebView
        android:id="@+id/ww_map"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

</androidx.constraintlayout.widget.ConstraintLayout>