<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CartActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/styleBar"
        android:layout_width="match_parent"
        android:elevation="2dp"
        android:gravity="start|center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.12"
            android:text="@string/cart_title"
            android:textColor="@color/main_text_color"
            android:textSize="20sp" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/down_bar_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_btn_menu"
                android:contentDescription="@string/common_desc"
                android:onClick="goToProfile"
                app:srcCompat="@drawable/ic_btn_profile" />

            <ImageButton
                android:id="@+id/btn_menu"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_btn_menu"
                android:contentDescription="@string/common_desc"
                android:onClick="goToMain"
                app:srcCompat="@drawable/ic_btn_menunopress" />

            <ImageButton
                android:id="@+id/btn_contacts"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_btn_menu"
                android:onClick="goToContacts"
                android:contentDescription="@string/common_desc"
                app:srcCompat="@drawable/ic_btn_contacts" />

            <ImageButton
                android:id="@+id/btn_cart"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/common_desc"
                app:srcCompat="@drawable/ic_btn_basketpress" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/count_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/empty_cart"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_list"
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:paddingBottom="15dp">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button4"
            style="@style/regularButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/make_order"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.12"
            android:textSize="16sp"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>